# am_app

./: .gitignore  dev.sh
backend/: CMakeLists.txt
backend/algorithms/: CMakeLists.txt  ga (Copiar).cpp  ga.cpp  ga.hpp  prueba  prueba (Copiar)
backend/algorithms/cga/: CMakeLists.txt  bindings.cpp  cga.cpp  cga.hpp  cga_config.hpp  cga_types.hpp  gene.hpp  individual.hpp
backend/algorithms/evo_core/: CMakeLists.txt  config_base.hpp  population.hpp  types.hpp
backend/algorithms/ga/: CMakeLists.txt  bindings.cpp  chromosome.hpp  ga.cpp  ga.hpp  ga_config.hpp  ga_types.hpp  individual.hpp  population.hpp  prueba
backend/benchmarks/: CMakeLists.txt  bindings.cpp  functions.cpp  functions.hpp  kinematic.cpp  kinematic.hpp  kinematic_bindings.cpp
backend/core/: CMakeLists.txt  logger.cpp  logger.hpp
backend/engines/: CMakeLists.txt  engine_base.hpp  genetic_engine_base.hpp
backend/engines/abc/: CMakeLists.txt  abc_config.hpp  abc_engine.cpp  abc_engine.hpp  bindings.cpp
backend/engines/bfoa/: CMakeLists.txt  bacterium.hpp  bfoa_config.hpp  bfoa_engine.cpp  bfoa_engine.hpp  bindings.cpp
backend/engines/cga/: CMakeLists.txt  bindings.cpp  cga_config.hpp  cga_engine.cpp  cga_engine.hpp
backend/engines/de/: CMakeLists.txt  bindings.cpp  de_config.hpp  de_engine.cpp  de_engine.hpp
backend/engines/ga/: CMakeLists.txt  bindings.cpp  ga_config.hpp  ga_engine.cpp  ga_engine.hpp
backend/engines/pso/: CMakeLists.txt  bindings.cpp  pso_config.hpp  pso_engine.cpp  pso_engine.hpp
backend/evo_core/: CMakeLists.txt  binary_individual.hpp  bindings.cpp  config_base.hpp  particle.hpp  population.hpp  real_individual.hpp  types.hpp
frontend/: __init__.py  main.py  paths.py  state.py
frontend/config/: __init__.py  benchmarks.py
frontend/controllers/: __init__.py  app_controller.py  ga_controller.py  run_controller.py  settings_controller.py
frontend/controllers/algorithms/: __init__.py  abc_controller.py  base_controller.py  bfoa_controller.py  cga_controller.py  de_controller.py  ga_controller.py  pso_controller.py
frontend/native/: __init__.py
frontend/pages/: __init__.py  main_page.py  main_window.py  menu_page.py  run_page.py  run_page_backup.py  settings_page.py
frontend/styles/: base.qss  buttons.qss  theme_light.qss
frontend/ui_components/controls/: __init__.py  abc_controls.py  bfoa_controls.py  cga_controls.py  controls.py  de_controls.py  ga_controls.py  problem_panels.py  pso_controls.py
frontend/ui_components/graphs/: __init__.py  graph_container.py
frontend/utils/: __init__.py  button_helpers.py  layout_helpers.py  style_loader.py  widget_factory.py
models/: __init__.py  run_result.py  state.py
services/: __init__.py  exporters.py
